crates/deadline-cli/tests/snapshots/cli_job__job_get_search_term_single_match_shows_details.snap
---
source: crates/deadline-cli/tests/cli_job.rs
info:
  program: deadline
  args:
    - job
    - get
    - render
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61357"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61357"
    AWS_ENDPOINT_URL_STS: "http://localhost:61357"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpxMFobG/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpxMFobG
---
success: true
exit_code: 0
----- stdout -----
jobId: job-aaf4cdf8aae242f58fb84c5bb19f199b
name: Render Job
lifecycleStatus: CREATE_COMPLETE

estimatedTimeRemaining: N/A

----- stderr -----
